<resources>
    <string name="app_name">SMS Backup</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="okay">Okay</string>
    <string name="granting_app_permissions_msg">Hurray! Permissions have been granted successfully. Please
        restart the app to see the effect. </string>
    <string name="not_granting_app_permission_msg">Oops! The permissions have not been granted.
        Without granting the permissions the app is limited in functionality.</string>
    <string name="the_lion_story">Once when a lion, the king of the jungle, was asleep, a little mouse began running up and down on him. This soon awakened the lion, who placed his huge paw on the mouse, and opened his big jaws to swallow him.</string>
    <string name="press_back_once_more_to_exit">Press back once more to exit</string>
    <string name="new_account">New Account</string>
    <string name="loading">Loading....</string>
    <string name="menu_navigation">Menu navigation</string>
    <string name="home_header_icon">Home header icon</string>
    <string name="welcome">Welcome</string>
    <string name="premium_upgrade_msg">Please Note : You are using the limited version, upgrade to premium version for all features.</string>
    <string name="skip">Skip</string>
    <string name="upgrade_premium">Upgrade premium</string>
    <string name="backup">Backup</string>
    <string name="backup_icon">Backup icon</string>
    <string name="restore">Restore</string>
    <string name="restore_icon">Restore icon</string>
    <string name="view">View</string>
    <string name="search">Search</string>
    <string name="hello_world">Hello world</string>
    <string name="sms_backup">SMS backup</string>
    <string name="sms_backup_small_cap">SMS Backup</string>
    <string name="call_logs_backup">Call logs backup</string>
    <string name="contact_backup">Contact backup</string>
    <string name="select_backup_type">Select Backup Type</string>
    <string name="back">Back</string>
    <string name="_1234">1234</string>
    <string name="_4">4</string>
    <string name="app_icon">App icon</string>
    <string name="msg_app_permissions">Dear user, the app needs some permissions to be granted for working
        perfectly.</string>
    <string name="cancel">Cancel</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="backup_file_name">Backup File Name</string>
    <string name="file_name">File name</string>
    <string name="give_a_file_name">Please give a file name</string>
    <string name="sms_backup_successfully">Sms backup has completed successfully.</string>
    <string name="select_sms_conversations">Select some SMS conversations.</string>
    <string name="no_sms">No SMS</string>
    <string name="select_restore_type">Select Restore Type</string>
    <string name="no_backup_file_found">No Backup file found</string>
    <string name="sms_restore">SMS Restore</string>
    <string name="total_sms_">"Total SMS : "</string>
    <string name="restoring_wait">Restoring.. wait...</string>
    <string name="sms_restored_successfully_msg">SMS have restored successfully. Now you can change the default Message
        app from the Setting Screen. Would you like to open the Setting Screen ?</string>
    <string name="attention">Attention</string>
    <string name="msg_app_default_message_permission">On Kitkat and above version only the default Message app can
        write SMS, so to restore the backups this app need to be the default Message app. You can always change it in
        the settings.</string>
    <string name="backup_file">Backup file</string>
    <string name="backup_note">Backup note</string>
    <string name="backup_sms_wait">Backup sms... wait...</string>
    <string name="quick_options">Quick Options</string>
    <string name="sms_restore_">SMS restore</string>
    <string name="call_logs_restore">Call log restore</string>
    <string name="contact_restore">Contact restore</string>
    <string name="open_setting_ui">Open Setting</string>
    <string name="restoring_sms_completed">Restoring SMS Completed</string>
    <string name="select_some_backup_files">Please select some backup files.</string>
</resources>
