<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="gui.home.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@drawable/ic_big_button_selector"
            android:clickable="true"
            android:onClick="onClickedBackup"
            android:orientation="vertical"
            android:padding="@dimen/dp_8">

            <ImageView
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/backup_icon"
                android:padding="@dimen/dp_10"
                android:src="@drawable/ic_backup"/>

            <TextView
                android:id="@+id/txt_backup"
                style="@style/textBodyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:shadowColor="@color/transparent_black"
                android:shadowDx=".4"
                android:shadowDy=".4"
                android:shadowRadius=".4"
                android:text="@string/backup"
                android:textSize="@dimen/material_text_button"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@drawable/ic_big_button_selector"
            android:clickable="true"
            android:onClick="onClickedRestore"
            android:orientation="vertical"
            android:padding="@dimen/dp_8">

            <ImageView
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/restore_icon"
                android:padding="@dimen/dp_5"
                android:src="@drawable/ic_restore"/>

            <TextView
                android:id="@+id/txt_restore"
                style="@style/textBodyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:shadowColor="@color/transparent_black"
                android:shadowDx=".4"
                android:shadowDy=".4"
                android:shadowRadius=".4"
                android:text="@string/restore"
                android:textSize="@dimen/material_text_button"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@drawable/ic_big_button_selector"
            android:clickable="true"
            android:onClick="onClickedView"
            android:orientation="vertical"
            android:padding="@dimen/dp_8">

            <ImageView
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/backup_icon"
                android:padding="@dimen/dp_10"
                android:src="@drawable/ic_view"/>

            <TextView
                android:id="@+id/txt_view"
                style="@style/textBodyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:shadowColor="@color/transparent_black"
                android:shadowDx=".4"
                android:shadowDy=".4"
                android:shadowRadius=".4"
                android:text="@string/view"
                android:textSize="@dimen/material_text_button"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@drawable/ic_big_button_selector"
            android:clickable="true"
            android:onClick="onClickedSearch"
            android:orientation="vertical"
            android:padding="@dimen/dp_8">

            <ImageView
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/restore_icon"
                android:padding="@dimen/dp_5"
                android:src="@drawable/ic_search_phone"/>

            <TextView
                android:id="@+id/txt_search"
                style="@style/textBodyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:shadowColor="@color/transparent_black"
                android:shadowDx=".4"
                android:shadowDy=".4"
                android:shadowRadius=".4"
                android:text="@string/search"
                android:textSize="@dimen/material_text_button"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
